tests/type-errors/fun_instr_error_invalid_number_args.arl
archetype fun_instr_error_invalid_number_args

variable res : nat = 0

function f() {
  res := 2
}

entry exec() {
  f(1)
}
